# medlabs-standard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
docs/: flow.md  flow.puml
examples/: README.md  parse_pdf.py  parse_text.py  pipeline_with_mock_llm.py  validate_standard_fixtures.py
sdk/python/medlabs_sdk/: __init__.py  config.py  contracts.py  logger.py  observability.py  pipeline.py
sdk/python/medlabs_sdk/core/: __init__.py  models.py  models_pydantic.py
sdk/python/medlabs_sdk/core/extract/: __init__.py  ai.py  base.py  regex.py
sdk/python/medlabs_sdk/core/ingest/: __init__.py  base.py  pdf.py  text.py
sdk/python/medlabs_sdk/core/map/: __init__.py  (+1 more)
sdk/python/medlabs_sdk/llm/: __init__.py  base.py
sdk/python/medlabs_sdk/providers/: __init__.py  langfuse_openai_client.py  langfuse_prompt_provider.py  langfuse_tracer.py  noop_tracer.py  openai_client.py  prompted_llm_client.py
standard/: README.md
standard/examples/v0.1/biochem/: biochem-example-1.json  biochem-example-2.json  biochem-example-3.json  biochem-example-4.json  biochem-example-5.json
standard/examples/v0.1/cbc/: cbc-example-1.json  cbc-example-2.json  cbc-example-3.json
standard/examples/v0.1/urinalysis/: urinalysis-example-1.json  urinalysis-example-2.json  urinalysis-example-3.json  urinalysis-example-4.json  urinalysis-example-5.json
standard/schema/v0.1/: biochem.json  cbc.json  core.json  urinalysis.json
tests/: test_map.py  test_normalize.py  test_pipeline_integration.py  test_prompted_llm_client.py  test_validate.py
(+8 files in other folders)
